--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -7,3 +7,5 @@ parameters:
         # the placeholder "%ShopwareHashedCacheDir%" will be replaced on execution by bin/phpstan-config-generator.php script
         container_xml_path: '%rootDir%/../../../../../../..%ShopwareHashedCacheDir%/srcShopware_Development_KernelDevDebugContainer.xml'
 
+    ignoreErrors:
+        - '#Frosh\\ThumbnailProcessor\\Service\\ThumbnailServiceDecorator::__construct\(\) does not call parent constructor from Shopware\\Core\\Content\\Media\\Thumbnail\\ThumbnailService.#'
