--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -2,8 +2,12 @@ parameters:
     level: 7
     reportUnmatchedIgnoredErrors: false
     inferPrivatePropertyTypeFromConstructor: true
+    checkMissingIterableValueType: false
     symfony:
         constant_hassers: false
 
     ignoreErrors:
         - '#Frosh\\ThumbnailProcessor\\Service\\ThumbnailServiceDecorator::__construct\(\) does not call parent constructor from Shopware\\Core\\Content\\Media\\Thumbnail\\ThumbnailService.#'
+
+    excludes_analyse:
+        - bin/phpstan-config-generator.php
