--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "thumbnail"
     ],
     "description": "This plugins allows you to use variable thumbnails, without having them on storage.",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "type": "shopware-platform-plugin",
     "license": "mit",
     "authors": [
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "shopware/core": "~6.2"
+        "shopware/core": "~6.2|~6.3"
     },
     "extra": {
         "shopware-plugin-class": "Frosh\\ThumbnailProcessor\\FroshPlatformThumbnailProcessor",
