--- a/.github/workflows/storecheck.yml
+++ b/.github/workflows/storecheck.yml
@@ -10,6 +10,7 @@ env:
     PLUGIN_NAME: FroshPlatformThumbnailProcessor
     ACCOUNT_USER: ${{ secrets.ACCOUNT_USER }}
     ACCOUNT_PASSWORD: ${{ secrets.ACCOUNT_PASSWORD }}
+    PLUGIN_UPLOADER_VERSION: 0.3.2
 
 jobs:
     validatePlugin:
@@ -22,7 +23,7 @@ jobs:
                     path: ${{ env.PLUGIN_NAME }}
 
             -   name: getPluginUploader
-                run: wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.3.1/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
+                run: wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/${{ env.PLUGIN_UPLOADER_VERSION }}/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
 
             -   name: Build Zip
                 run: php frosh-plugin-upload.phar ext:zip ${PLUGIN_NAME}
@@ -41,7 +42,7 @@ jobs:
                     path: ${{ env.PLUGIN_NAME }}
 
             -   name: getPluginUploader
-                run: wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.3.1/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
+                run: wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/${{ env.PLUGIN_UPLOADER_VERSION }}/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
 
             -   name: StoreUpdate
                 run: php frosh-plugin-upload.phar ext:update $(pwd)/${{ env.PLUGIN_NAME }}/
@@ -59,11 +60,8 @@ jobs:
                 with:
                     path: ${{ env.PLUGIN_NAME }}
 
-            #            - name: Install dependencies
-            #              run: composer install --prefer-dist --no-progress --no-suggest
-
             -   name: getPluginUploader
-                run: wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.3.1/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
+                run: wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/${{ env.PLUGIN_UPLOADER_VERSION }}/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
 
             -   name: Build Zip
                 run: php frosh-plugin-upload.phar ext:zip ${PLUGIN_NAME}
