--- a/.github/workflows/pack-plugin.yml
+++ b/.github/workflows/pack-plugin.yml
@@ -28,6 +28,7 @@ jobs:
 
             -   name: Build & create zip
                 run: |
+                    npm install --prefix ./${PLUGIN_NAME}/src/Resources/ --unsafe-perm
                     cp -r "./${PLUGIN_NAME}" "/plugins/${PLUGIN_NAME}"
                     start-mysql
                     pack-plugin "${PLUGIN_NAME}"
