--- a/.github/workflows/pack-plugin.yml
+++ b/.github/workflows/pack-plugin.yml
@@ -32,10 +32,12 @@ jobs:
                     cp -r "./${PLUGIN_NAME}" "/plugins/${PLUGIN_NAME}"
                     start-mysql
                     pack-plugin "${PLUGIN_NAME}"
-                artefacts:
-                    paths:
-                        - ${{ env.PLUGIN_NAME }}.zip
-                    expire_in: 1 week
+
+            -   name: Upload Artefact
+                uses: actions/upload-artifact@v2
+                with:
+                    name: Plugin-Artefact
+                    path: ${{ env.PLUGIN_NAME }}.zip
 
             -   name: getPluginUploader
                 run: wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/${{ env.PLUGIN_UPLOADER_VERSION }}/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
