--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run PHPStan
-        uses: aragon999/phpstan-shopware-docker@master
+        uses: aragon999/phpstan-shopware-docker@v6.4.0
