--- a/.github/workflows/pack-plugin.yml
+++ b/.github/workflows/pack-plugin.yml
@@ -3,45 +3,14 @@ on:
     push:
         branches:
             - master
-        tags:
-            - '*'
-
-env:
-    PLUGIN_NAME: FroshPlatformThumbnailProcessor
-    ACCOUNT_USER: ${{ secrets.ACCOUNT_USER }}
-    ACCOUNT_PASSWORD: ${{ secrets.ACCOUNT_PASSWORD }}
 
 jobs:
-    pack:
-        runs-on: ubuntu-latest
-        container: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.0
-        steps:
-            -   name: Checkout
-                uses: actions/checkout@v2.3.1
-                with:
-                    path: ${{ env.PLUGIN_NAME }}
-
-            -   name: Build & create zip
-                run: |
-                    npm install --prefix "./${PLUGIN_NAME}/src/Resources/app/storefront/"
-                    cp -r "./${PLUGIN_NAME}" "/plugins/${PLUGIN_NAME}"
-                    start-mysql
-                    plugin-uploader ext:prepare /plugins/${PLUGIN_NAME}/
-                    pack-plugin "${PLUGIN_NAME}"
-            -   name: Upload Artefact
-                uses: actions/upload-artifact@v2
-                with:
-                    name: ${{ env.PLUGIN_NAME }}
-                    path: ${{ env.PLUGIN_NAME }}.zip
-
-            -   name: Validate Zip
-                run: plugin-uploader ext:validate $(pwd)/${PLUGIN_NAME}.zip
-
-            -   name: Update store informations
-                run: plugin-uploader ext:update $(pwd)/${PLUGIN_NAME}/
-
-            -   name: Upload to store
-                if: startsWith(github.ref, 'refs/tags/')
-                run: plugin-uploader ext:upload $(pwd)/${PLUGIN_NAME}.zip --createRelease
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    build:
+        uses: FriendsOfShopware/workflows/.github/workflows/store.yml@main
+        with:
+            extensionName: FroshPlatformThumbnailProcessor
+            shopwareVersion: 6.4.0
+        secrets:
+            accountUser: ${{ secrets.ACCOUNT_USER }}
+            accountPassword: ${{ secrets.ACCOUNT_PASSWORD }}
+            ghToken: ${{ secrets.GITHUB_TOKEN }}
