--- a/.github/workflows/pack-plugin.yml
+++ b/.github/workflows/pack-plugin.yml
@@ -9,7 +9,7 @@ jobs:
         uses: FriendsOfShopware/actions/.github/workflows/store.yml@main
         with:
             extensionName: FroshPlatformThumbnailProcessor
-            shopwareVersion: 6.4.0
+            shopwareVersion: '6.4.0'
         secrets:
             accountUser: ${{ secrets.ACCOUNT_USER }}
             accountPassword: ${{ secrets.ACCOUNT_PASSWORD }}
