--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "shopware/core": "^6.4.10"
+        "shopware/core": "~6.4.10"
     },
     "suggest": {
         "frosh/lazy-sizes": "*"
