--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ phpstan.neon
 frosh-platform-thumbnail-processor.css
 frosh-platform-thumbnail-processor.js
 node_modules
+src/DependencyInjection/ThumbnailService.php
