--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         }
     ],
     "require": {
-        "shopware/core": "~6.5.0"
+        "shopware/core": "~6.5.0",
+        "nikic/php-parser": "^4.13.0"
     },
     "suggest": {
         "frosh/lazy-sizes": "*"
