--- a/.github/workflows/pack-plugin.yml
+++ b/.github/workflows/pack-plugin.yml
@@ -2,14 +2,13 @@ name: PackPlugin
 on:
     push:
         branches:
-            - master
+            - main
 
 jobs:
     build:
-        uses: FriendsOfShopware/actions/.github/workflows/store.yml@main
+        uses: FriendsOfShopware/actions/.github/workflows/store-shopware-cli.yml@main
         with:
             extensionName: FroshPlatformThumbnailProcessor
-            shopwareVersion: '6.4.0'
         secrets:
             accountUser: ${{ secrets.ACCOUNT_USER }}
             accountPassword: ${{ secrets.ACCOUNT_PASSWORD }}
