feat: enable composer when packaging plugin

--- a/.shopware-extension.yml
+++ b/.shopware-extension.yml
@@ -51,6 +51,8 @@ store:
       priority: 1
 build:
   zip:
+    composer:
+      enabled: true
     assets:
       enable_es_build_for_admin: true
       enable_es_build_for_storefront: true
