chore: add no-scripts to composer require for v6.5.0

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
         if: matrix.version == 'v6.5.0'
         run: |
           cd /opt/shopware/
-          composer require tomasvotruba/type-coverage --dev
+          composer require tomasvotruba/type-coverage --dev --no-scripts
 
       - name: PHPStan
         run: |
