--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'feat/useSetupShopwareAction'
     tags-ignore:
       - '*'
   pull_request:
@@ -10,41 +11,34 @@ on:
     - cron: "5 15 * * *"
 
 jobs:
-  test:
+  phpunit:
+    name: Run tests
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        version: [ "v6.5.0", "v6.5.1", "v6.5.2", "v6.5.3", "v6.5.4", "trunk" ]
-    container: ghcr.io/friendsofshopware/platform-plugin-dev:${{ matrix.version }}
-    runs-on: ubuntu-latest
+        shopware-version:
+          - 'v6.5.0.0'
+          - 'v6.5.3.2'
+          - 'trunk'
     steps:
+      - name: Setup Shopware
+        uses: FriendsOfShopware/setup-shopware@main
+        with:
+          shopware-version: ${{ matrix.shopware-version }}
+          php-version: 8.1
+
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Test
-        run: |
-          start-mysql
-          mysql -V
-          php -v
-          cp -r "./" "/plugins/FroshPlatformThumbnailProcessor"
-          cd /plugins/FroshPlatformThumbnailProcessor
-          php -d pcov.enabled=1 /opt/shopware/vendor/bin/phpunit  --coverage-clover clover.xml
-
-      - uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          files: ./clover.xml
-          root_dir: /plugins/FroshPlatformThumbnailProcessor
-          working-directory: /plugins/FroshPlatformThumbnailProcessor
+          path: custom/plugins/FroshPlatformTemplateMail
 
-      - name: Install dependencies for PHPStan
-        if: matrix.version == 'v6.5.0'
+      - name: Run Tests
         run: |
-          cd /opt/shopware/
-          composer require tomasvotruba/type-coverage --dev --no-scripts
+          php -v
+          php -d pcov.enabled=1 ./vendor/bin/phpunit -c custom/plugins/FroshPlatformTemplateMail/phpunit.xml  --coverage-clover clover.xml
 
-      - name: PHPStan
-        run: |
-          cd /plugins/FroshPlatformThumbnailProcessor
-          /opt/shopware/vendor/bin/phpstan analyse -c phpstan.neon
+      - name: Upload coverage
+        uses: codecov/codecov-action@v1
+        with:
+          file: ./clover.xml
