chore: change into plugins directory before running PHPUNIT

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: PHPUnit
         run: |
+          cd /plugins/FroshPlatformThumbnailProcessor
           php -d pcov.enabled=1 /opt/shopware/vendor/bin/phpunit  --coverage-clover clover.xml
 
       - uses: codecov/codecov-action@v3
