chore: correct autoload-dev namespace

--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Frosh\\ThumbnailProcessor\\Tests\\Unit": "tests/unit",
-            "Frosh\\ThumbnailProcessor\\Tests\\Integration": "tests/integration"
+            "Frosh\\ThumbnailProcessor\\Tests\\Unit\\": "tests/unit",
+            "Frosh\\ThumbnailProcessor\\Tests\\Integration\\": "tests/integration"
         }
     }
 }
