--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,14 +25,18 @@ jobs:
 
       - name: Prepare
         run: |
-          echo "MEDIA_PATH=1" >> /opt/shopware/.env
-
           start-mysql
           php /opt/shopware/bin/console -V
           mysql -V
           php -v
           cp -r "./" "/plugins/FroshPlatformThumbnailProcessor"
           cd /plugins/FroshPlatformThumbnailProcessor
+
+      - name: Prepare FeatureTag Usage
+        run: |
+          cd /opt/shopware/
+          echo "MEDIA_PATH=1" >> .env
+          curl https://patch-diff.githubusercontent.com/raw/shopware/platform/pull/3348.patch | git apply -v
 
       - name: PHPUnit
         run: |
