chore: show shopware version while starting test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Prepare
         run: |
           start-mysql
+          php /opt/shopware/bin/console -V
           mysql -V
           php -v
           cp -r "./" "/plugins/FroshPlatformThumbnailProcessor"
