--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "shopware/core": "~6.6.0||~6.5.9999999",
+        "shopware/core": "~6.6.0",
         "nikic/php-parser": "^4.13.0"
     },
     "suggest": {
