chore: add info about composer version in test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
           php bin/console -V
           mysql -V
           php -v
+          composer -V
           echo ${{ github.workspace }}
 
       - name: Checkout
