--- a/.shopware-extension.yml
+++ b/.shopware-extension.yml
@@ -56,19 +56,4 @@ build:
       enable_es_build_for_storefront: true
     pack:
       before_hooks:
-        - echo "<?php
-          
-          declare (strict_types=1);
-          namespace Frosh\ThumbnailProcessor\DependencyInjection;
-          
-          class FileSaver extends \Shopware\Core\Content\Media\File\FileSaver
-          {
-          }" > src/DependencyInjection/FileSaver.php
-        - echo "<?php
-          
-          declare (strict_types=1);
-          namespace Frosh\ThumbnailProcessor\DependencyInjection;
-          
-          class ThumbnailService extends \Shopware\Core\Content\Media\Thumbnail\ThumbnailService
-          {
-          }" > src/DependencyInjection/ThumbnailService.php
+        - composer create-placeholders
