chore: add composer script to init placeholder classes
(cherry picked from commit 7339f7aa7ad850ac7d9c6f715d5bde42acf0a3bd)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,7 @@ jobs:
       - name: PHPUnit
         working-directory: ${{ github.workspace }}/custom/plugins/${{ env.PLUGIN_NAME }}
         run: |
+          composer create-placeholders
           php -d pcov.enabled=1 ${{ github.workspace }}/vendor/bin/phpunit  --coverage-clover clover.xml
 
       - uses: codecov/codecov-action@v3
