chore: auto test v4

--- a/.github/workflows/test-branches.yml
+++ b/.github/workflows/test-branches.yml
@@ -7,3 +7,5 @@ on:
 jobs:
   main:
     uses: FriendsOfShopware/FroshPlatformThumbnailProcessor/.github/workflows/test.yml@main
+  v4:
+    uses: FriendsOfShopware/FroshPlatformThumbnailProcessor/.github/workflows/test.yml@v4
