--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [ "v6.5.0.0", "v6.5.1.1", "v6.5.2.1", "v6.5.3", "v6.5.4.1", "v6.5.5.2", "v6.5.6.1", "v6.5.7.4", "v6.5.8.7", "6.5.x" ]
+        version: [ "v6.5.0.0", "v6.5.1.1", "v6.5.2.1", "v6.5.3.3", "v6.5.4.1", "v6.5.5.2", "v6.5.6.1", "v6.5.7.4", "v6.5.8.7", "6.5.x" ]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Shopware
@@ -49,7 +49,7 @@ jobs:
       - name: PHPUnit
         working-directory: ${{ github.workspace }}/custom/plugins/${{ env.PLUGIN_NAME }}
         run: |
-          php -d pcov.enabled=1 /opt/shopware/vendor/bin/phpunit  --coverage-clover clover.xml
+          php -d pcov.enabled=1 ${{ github.workspace }}/vendor/bin/phpunit  --coverage-clover clover.xml
 
       - uses: codecov/codecov-action@v3
         env:
